--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "graphql": "^15.3.0",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
-    "requirejs": "^2.3.6"
+    "requirejs": "^2.3.6",
+    "socket.io": "^3.0.3"
   }
 }
